# fabber_models_dsc

./: .gitignore  CMakeLists.txt  Makefile  README.md  dsc_models.cc  dsc_models.h  fabber_client.cc  fwdmodel_dsc.cc  fwdmodel_dsc.h  fwdmodel_dsc_cpi.cc  fwdmodel_dsc_cpi.h  spline_interpolator.cc  spline_interpolator.h
cprob/: CMakeLists.txt  Makefile  const.c  gamma.c  mtherr.c
doc/: conf.py  index.rst  theory.rst
dscprob/: Makefile  const.c  cprob.h  cprob_test.c  dscprob.h  expx2.c  gamma.c  mconf.h  mtherr.h  unity.c  xmath.h
test/: aif_sig.mat  test.py
